--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -91,6 +91,10 @@
     <string name="selected_files_txt1">Selected files</string>
     <string name="selected_files_txt2">Remove all</string>
     <string name="wa_data">WhasApp Data</string>
+    <string name="spinner_step2_txt1">Last 3 years</string>
+    <string name="spinner_step2_txt2">Last 1 year</string>
+    <string name="spinner_step2_txt3">Last 3 months</string>
+
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
